fixed and validated code against html and css validator websites

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel=“stylesheet” href=“style.css” />
+    <link rel=“stylesheet” href="style.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
@@ -11,21 +11,21 @@
 <body class="parent">
     <header class="child header">header</header>
     <div class="child nav">Nav</div>
-    <div class="child child-two">IMG placement <img src="C:\Users\Lollietta\Pictures\candor_photo.jpg"                                         alt="Forbes Summit Profile Pic"></div>
+    <div class="child child-two">IMG placement <img src="C:/Users/Lollietta/Pictures/candor_photo.jpg"                                         alt="Forbes Summit Profile Pic"></div>
     <div class="child child-three">
-        <h class="child child-three c3-h">About Me</h>
+        <h3 class="child child-three c3-h">About Me</h3>
         <p class="child child-three c3-1">Write travel history</p>
-        <p class="child child-three c3-2">Work history here<p/>
+        <p class="child child-three c3-2">Work history here</p>
       </div>
     <div class="child child-four">
-        <h class="child child-four c4-h">featured work</h>
+        <h3 class="child child-four c4-h">featured work</h3>
         <p class="child child-four c4-1">work ex 1</p>
         <p class="child child-four c4-2">work ex 2</p>
         <p class="child child-four c4-3">work ex 3</p>
         <p class="child child-four c4-4">work ex 4</p>
      </div>
     <footer class="child footer">
-      <h class="child footer f-h">Contacts</h>
+      <h4 class="child footer f-h">Contacts</h4>
       <ul class="child footer f-ul">
         <li>Instagram</li>
         <li>LinkedIn</li>
