--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel=“stylesheet” href="style.css" />
+    <link rel=“stylesheet” href="/home/lollietta/sei/labs/portfolio/style.css" >
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
@@ -18,7 +18,7 @@
         <p class="child child-three c3-2">Work history here</p>
       </div>
     <div class="child child-four">
-        <h3 class="child child-four c4-h">featured work</h3>
+        <h3 class="child child-four c4-h">featured work..minor chg</h3>
         <p class="child child-four c4-1">work ex 1</p>
         <p class="child child-four c4-2">work ex 2</p>
         <p class="child child-four c4-3">work ex 3</p>
