--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="child child-three c3-2">Work history here</p>
       </div>
     <div class="child child-four">
-        <h3 class="child child-four c4-h">featured work..minor chg</h3>
+        <h3 class="child child-four c4-h">featured work...minor chg</h3>
         <p class="child child-four c4-1">work ex 1</p>
         <p class="child child-four c4-2">work ex 2</p>
         <p class="child child-four c4-3">work ex 3</p>
